# flow-app

./: package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: api.rs  commands.rs  content.rs  datetime.rs  discord.rs  main.rs  models.rs  process.rs  utils.rs
src/components/: bar.tsx  chart.tsx  create.tsx  datepicker.tsx  expense.tsx  legend.tsx  loader.tsx  mode-toggle.tsx  side-nav.tsx  title-bar.tsx  tooltip.tsx
src/components/pages/: Account.tsx  Dash.tsx  Panel.tsx  Settings.tsx
src/components/ui/: calendar.tsx
src/interfaces/: interfaces.ts
src/lib/: auth.ts  getUser.ts
src/preload/: preload.html  preload.tsx  ui.tsx
src/splash/: splash.tsx  splashscreen.html  ui.tsx
src/styles/: globals.css
